# app/serializers/teammate_name_serializer.rb
@@ -1,0 +1,7 @@
+class TeammateNameSerializer < ActiveModel::Serializer
+  attributes :id, :full_name
+
+  def full_name
+    object.profile&.full_name
+  end
+end
